tdf#142317 chardlg UI: show approx auto-esc % based on EscProp

Subscripts and Superscripts normally have "automatic" enabled.
The value shown (in the greyed out raised/lowered by field)
was showing 8%. Well, that value is true only for default
nProp of 58%. If nProp is a non-default value, it is better
to show (an approximation) of the actual percentage that
is used to raise/lower the character.

[Note: this only affects the initial view when the
dialog is first opened. After any changes, it will
show the value in the saved user settings.]

Change-Id: Ife26e0c4f99a41e7568591f0a60cc7068dc3fd90
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/115739
Tested-by: Jenkins
Reviewed-by: Justin Luth <justin_luth@sil.org>